@startuml
' ==========================================================
' Diagramme de classes participantes — UC « Obtenir recommandations »
' Alignement : `backend/routes/api/recommendationRoutes.js`, `backend/services/recommendationService.js`
' ==========================================================

title Diagramme de classes participantes — UC « Obtenir recommandations »
left to right direction
skinparam dpi 160
skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam wrapWidth 240

class RecommendationRoutes <<controller>> {
  +GET /api/recommendations/(limit?)
}

class RecommendationService <<service>> {
  +getRecommendationsForUser(userId, { limit? })
}

class User <<model>> {
  +profile
}

class Project <<model>> {
  +category
  +aiAnalysis
  +status
}

RecommendationRoutes ..> RecommendationService
RecommendationService ..> User
RecommendationService ..> Project

@enduml
